--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
@@ -57,7 +57,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text NewOrder-Medium"
+      <div id="frameText1" class="text-left NewOrder-Medium"
         data-text="frameText1"
         data-style="text-align:left;"
         style="top: 457px;
@@ -68,7 +68,7 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text NewOrder-Medium"
+      <div id="frameText2" class="text-left NewOrder-Medium"
         data-text="frameText2"
         data-style="text-align:left;"
         style="top: 457px;
@@ -79,7 +79,7 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text NewOrder-Medium"
+      <div id="frameText3" class="text-left NewOrder-Medium"
         data-text="frameText3"
         data-style="text-align:left;"
         style="top: 457px;
