--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/MtSnow/160x600_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/MtSnow/160x600_MtSnow.htm
@@ -51,7 +51,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text poppins"
+      <div id="frameText1" class="text-left poppins"
         data-text="frameText1"
         data-style="text-align:left;"
         style="top: 457px;
@@ -62,7 +62,7 @@
           letter-spacing: 0.4px;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text poppins"
+      <div id="frameText2" class="text-left poppins"
         data-text="frameText2"
         data-style="text-align:left;"
         style="top: 457px;
@@ -73,7 +73,7 @@
           letter-spacing: 0.4px;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text poppins"
+      <div id="frameText3" class="text-left poppins"
         data-text="frameText3"
         data-style="text-align:left;"
         style="top: 457px;
