--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
@@ -54,7 +54,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text hoss-sharp-black"
+      <div id="frameText1" class="text-left hoss-sharp-black"
         data-text="frameText1"
         data-style="text-align:left;"
         style="top: 457px;
@@ -65,7 +65,7 @@
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text hoss-sharp-black"
+      <div id="frameText2" class="text-left hoss-sharp-black"
         data-text="frameText2"
         data-style="text-align:left;"
         style="top: 457px;
@@ -76,7 +76,7 @@
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text hoss-sharp-black"
+      <div id="frameText3" class="text-left hoss-sharp-black"
         data-text="frameText3"
         data-style="text-align:left;"
         style="top: 457px;
