--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/SevenSprings/160x600_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/SevenSprings/160x600_SevenSprings.htm
@@ -55,15 +55,15 @@
   </head>
   <body>
     <div class="" id="ad">
-      <div id="backgroundImage1" style="top: 65px;width: 160px;height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
-      <div id="backgroundImage2" style="top: 65px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
-      <div id="backgroundImage3" style="top: 65px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
+      <div id="backgroundImage1" style="top: 43px;width: 160px;height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
+      <div id="backgroundImage2" style="top: 43px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
+      <div id="backgroundImage3" style="top: 43px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
       <div id="topWhitePatch" class="frame" style="top:-556px;background-color:#008D55;"></div>
       <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:#008D55;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text hoss-sharp-black"
+      <div id="frameText1" class="text-left hoss-sharp-black"
         data-text="frameText1"
         data-style="text-align:left;"
         style="top: 457px;
@@ -74,7 +74,7 @@
           letter-spacing: 0.02em;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text hoss-sharp-black"
+      <div id="frameText2" class="text-left hoss-sharp-black"
         data-text="frameText2"
         data-style="text-align:left;"
         style="top: 457px;
